--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,7 +7,8 @@
 }
 
 .is-invalid {
-  border-color: $required;
+  border-color: $required !important;
+  background-image: none !important;
 }
 
 // input form overrides
