Enhancement  - Module seperation / lazy loading with preload strategy implemented  - Routes added  - Side navigation bar designed

--- a/src/app/layouts/components/app-layout/app-layout.component.html
+++ b/src/app/layouts/components/app-layout/app-layout.component.html
@@ -1,3 +1,6 @@
-<p>
-  app-layout works!
-</p>
+<div class="row m-0">
+  <app-navbar></app-navbar>
+  <div class="content px-5">
+    <router-outlet></router-outlet>
+  </div>
+</div>
