--- a/src/assets/scss/_appVariables.scss
+++ b/src/assets/scss/_appVariables.scss
@@ -1,8 +1,13 @@
+@import './appMixins';
 
 $required: #dc3545;
 $dull-gray: #e2e2e2;
 $light-gray: #ccc;
 $dark-gray: #43506A;
+
+$dark-green: #273113;
+$light-green: #A0C800;
+$white: #fff;
 
 
 $font-size-default: 16px;
