--- a/src/app/layouts/components/app-layout/app-layout.component.html
+++ b/src/app/layouts/components/app-layout/app-layout.component.html
@@ -1,5 +1,8 @@
 <div class="row m-0">
   <app-navbar></app-navbar>
+  <div class="header">
+    <app-header></app-header>
+  </div>
   <div class="content px-5">
     <router-outlet></router-outlet>
   </div>
